fix(/about): fix header covering headshot

--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -19,5 +19,6 @@
     //   100.00% 100.00%,
     //   000.00% 100.00%
     // );
+    z-index: 1;
   }
 }
